# LLM4MGLIAN

./: .gitignore  CONTRIBUTING.md  SECURITY.md  pyproject.toml  smoke_two_stage.py  test_mhc.py
Encoding Mapping/: Cargo.toml  README.md
Encoding Mapping/examples/: normalize.rs  show_conversion.rs
Encoding Mapping/src/: fixed.rs  lib.rs  menksoft.rs  mongol.rs  unicode.rs
Encoding Mapping/standards/: README.md
Encoding Mapping/tests/: menksoft_historical.rs  unicode_onon_samples.rs
Model/: README.md  __init__.py  blocks.py  config.py  model.py  recurrent.py  training.py  two_stage.py  vision.py
Model/inference/: __init__.py  cache.py
Model/layers/: __init__.py  mamba3_layer.py  mhc.py  mla.py  rmsnorm.py  rope.py  swiglu.py
Model/omvt/: __init__.py  compressor.py  heads.py  injector.py  losses.py  mixers.py  patcher.py  router.py  tower.py
Model/tests/: test_checkpoint_rng.py  test_checkpoint_scaler.py  test_config.py  test_data_resolve_shards.py  test_data_truncation.py  test_data_uneven_shards.py  test_decode_cache.py  test_evaluate_bound.py  test_generate.py  test_grad_ckpt.py  test_mhc.py  test_model_smoke.py  test_morph_runtime.py  test_multimodal_dataloader.py  test_omvt.py  test_train_omvt_ssl_real_data.py  test_train_rdt_cli.py  test_train_vlm_align_cli.py  (+2 more)
Tokenizer/: README.md  __init__.py
mongol_code-master/: .gitignore  README.md  pubspec.yaml
mongol_code_rs/: Cargo.toml  README.md
scripts/: generate.py  pretrain_e2e.sh  smoke_all.sh  smoke_multimodal.sh  test_all.sh  train_omvt_ssl.py  train_rdt.py  train_vlm_align.py
(+88 files in other folders)
