[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm4mglian-tokenizer"
version = "0.8.0"
description = "Routed multi-track tokenizer for Mongolian + zh/en + multimodal"
readme = "Tokenizer/README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "KeikaJames" }]
dependencies = []

[project.optional-dependencies]
hf = ["transformers>=4.40", "tokenizers>=0.19"]
eval = ["sentencepiece>=0.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["Tokenizer*"]
