[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm4mglian-tokenizer"
version = "0.8.0"
description = "Tokenizer and recurrent-depth transformer for Mongolian + zh/en/ja + multimodal"
readme = "Tokenizer/README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "KeikaJames" }]
dependencies = []

[project.optional-dependencies]
hf = ["transformers>=4.40", "tokenizers>=0.19"]
tokenizer-build = ["tokenizers>=0.19", "datasets>=2.0"]
eval = ["sentencepiece>=0.2"]
model = ["torch>=2.1"]
train = ["torch>=2.1", "mamba-ssm>=2.2"]
dist = ["torch>=2.1"]
vis = ["timm>=1.0"]
image = ["Pillow>=9"]
log = ["tensorboard>=2.14"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["Tokenizer*", "Model*"]
